--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
-    color: lime;
+    color: rgb(197, 51, 18);
     background: black;
     margin: 0px;
     font-family: "Rubik Wet Paint", system-ui;
 }
 
 header {
-    border-bottom: solid 2px lime;
+    border-bottom: solid 2px rgb(216, 127, 105);
     padding: 20px;
     font-size: 32px;
-    color: lime;
+    color: rgb(139, 54, 38);
 }
 
 .background {
@@ -22,11 +22,11 @@ header {
     padding-top: 80px;
     display: flex;
     justify-content: center;
-    border-bottom: solid 2px lime;
+    border-bottom: solid 2px rgb(207, 30, 24);
 }
 
 .video {
-    border: solid 2px lime;
+    border: solid 2px rgb(184, 92, 42);
 }
 
 .chamada-texto {
@@ -42,13 +42,13 @@ header {
     display: inline-block;
     overflow: hidden;
     white-space: nowrap;
-    color: lime;
+    color: rgb(110, 20, 174);
     /* Define a cor do texto */
 }
 
 .cursor {
     display: inline-block;
-    color: lime;
+    color: rgb(255, 0, 0);
     /* Define a mesma cor do texto */
     animation: blink-caret 0.7s step-end infinite;
 }
@@ -86,7 +86,7 @@ p {
 .categoria-videos {
     display: flex;
     overflow-x: auto;
-    scrollbar-color: lime black;
+    scrollbar-color: rgb(174, 14, 14) black;
     scrollbar-width: thin;
     gap: 10px;
 }
@@ -104,11 +104,11 @@ p {
 
 .categoria-videos img:hover {
     opacity: 1.0;
-    border: 3px solid lime;
+    border: 3px solid rgb(237, 45, 6);
 }
 
 .categoria h2 {
-    color: lime;
+    color: rgb(255, 0, 0);
 }
 
 .copyright {
