--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     color: rgb(197, 51, 18);
-    background: black;
+    background: rgb(231, 195, 195);
     margin: 0px;
     font-family: "Rubik Wet Paint", system-ui;
 }
